--- a/codingwithyongs_client/src/index.css
+++ b/codingwithyongs_client/src/index.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Importing local fonts */
+
+@font-face {
+  font-family: 'ShareTechMono';
+  src: url('assets/ShareTechMono-Regular.ttf'), url('assets/ShareTechMono-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BaiJamjuree';
+  src: url('assets/BaiJamjuree-Regular.ttf'), url('assets/BaiJamjuree-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'BaiJamjuree';
+  font-size: 16px;
+}
+
+::-webkit-scrollbar {
+  width: 7px; /* for vertical scrollbar */
+  height: 7px; /* for horizontal scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #343541;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background: #8892b0;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-button { width: 20px; }
+
+h2 {
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 1.2;
+}
