--- a/codingwithyongs_client/src/index.css
+++ b/codingwithyongs_client/src/index.css
@@ -25,10 +25,13 @@
   }
 
   input {
-    @apply w-full py-2 px-5 border rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply focus:border-transparent focus:ring-0 w-full py-2 px-5 border rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
   textarea {
-    @apply w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
+    @apply focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
+  }
+  select {
+    @apply focus:border-transparent focus:ring-0 py-2 px-5 rounded-md flex items-center border-none outline-none;
   }
 }
 
