--- a/codingwithyongs_client/src/index.css
+++ b/codingwithyongs_client/src/index.css
@@ -21,11 +21,11 @@
 
 @layer base {
   button {
-    @apply shadow-md py-2 px-5 cursor-pointer border rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply text-sm px-2 py-1 h-full shadow-md md:py-2 md:px-5 cursor-pointer border md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
 
   input {
-    @apply focus:border-transparent focus:ring-0 w-full py-2 px-5 border rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply placeholder:text-sm md:placeholder:text-base focus:border-transparent focus:ring-0 w-full md:py-2 md:px-5 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
   textarea {
     @apply focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
