--- a/codingwithyongs_client/src/index.css
+++ b/codingwithyongs_client/src/index.css
@@ -25,10 +25,10 @@
   }
 
   input {
-    @apply placeholder:text-sm md:placeholder:text-base focus:border-transparent focus:ring-0 w-full md:py-2 md:px-5 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-5 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
   textarea {
-    @apply focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
+    @apply  border-transparent focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
   }
   select {
     @apply focus:border-transparent focus:ring-0 py-2 px-5 rounded-md flex items-center border-none outline-none;
