--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,15 +21,17 @@
 
 @layer base {
   button {
-    @apply text-sm px-2 py-1 h-full shadow-md md:py-2 md:px-5 cursor-pointer border md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply text-sm px-2 py-1 h-full md:py-2 md:px-5 cursor-pointer border md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
 
   input {
     @apply placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-5 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
+
   textarea {
-    @apply  border-transparent focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
+    @apply border-transparent focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
   }
+
   select {
     @apply focus:border-transparent focus:ring-0 py-2 px-5 rounded-md flex items-center border-none outline-none;
   }
@@ -45,14 +47,15 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 12px; /* for vertical scrollbar */
+  width: 12px;
+  /* for vertical scrollbar */
   height: 5px;
 }
 
 ::-webkit-scrollbar-track {
   cursor: pointer;
   border-radius: 8px;
-  
+
   background: #b3b3b3;
 }
 
@@ -62,7 +65,9 @@ body {
   border-radius: 8px;
 }
 
-::-webkit-scrollbar-button { width: 16px; }
+::-webkit-scrollbar-button {
+  width: 16px;
+}
 
 h2 {
   font-size: 25px;
@@ -70,7 +75,7 @@ h2 {
   line-height: 1.2;
 }
 
-p{
+p {
   font-size: 20px;
   line-height: 1.3;
 }
