--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,7 @@
   }
 
   input {
-    @apply placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-5 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply placeholder:text-bg_lighter placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-5 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
 
   textarea {
