--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,19 +21,19 @@
 
 @layer base {
   button {
-    @apply text-sm p-1 h-full md:p-2 cursor-pointer border md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply text-sm p-1 h-full md:p-2 cursor-pointer border flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
 
   input {
-    @apply placeholder:text-bg_lighter placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-4 border rounded-sm md:rounded-md flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply placeholder:text-bg_lighter placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-4 border flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
 
   textarea {
-    @apply border-transparent focus:border-transparent focus:ring-0 w-full py-2 px-5 rounded-md flex items-center border-none outline-none;
+    @apply border-transparent focus:border-transparent focus:ring-0 w-full py-2 px-5 flex items-center border-none outline-none;
   }
 
   select {
-    @apply focus:border-transparent focus:ring-0 py-2 px-5 rounded-md flex items-center border-none outline-none;
+    @apply focus:border-transparent focus:ring-0 py-2 px-5 flex items-center border-none outline-none;
   }
 
   form input[type="text"],
@@ -48,7 +48,7 @@
   form input[type="email"],
   form input[type="number"],
   form textarea {
-    @apply w-full block p-2;
+    @apply flex w-full px-3 outline-none border-transparent focus:border-transparent focus:ring-0 p-2;
   }
 }
 
