design: calendar styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,10 +24,6 @@
     @apply text-sm p-1 h-full md:p-2 cursor-pointer border flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
 
-  input {
-    @apply placeholder:text-bg_lighter placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-4 border flex items-center hover:shadow-none hover:border hover:border-bg_light;
-  }
-
   textarea {
     @apply border-transparent focus:border-transparent focus:ring-0 w-full py-2 px-5 flex items-center border-none outline-none;
   }
@@ -47,8 +43,10 @@
   form input[type="text"],
   form input[type="email"],
   form input[type="number"],
+  form select,
   form textarea {
-    @apply flex w-full px-3 outline-none border-transparent focus:border-transparent focus:ring-0 p-2;
+    @apply placeholder:text-bg_lighter placeholder:text-sm md:placeholder:text-base border-transparent focus:border-transparent focus:ring-0 w-full md:py-2 border-none outline-none md:px-4 border flex items-center hover:shadow-none hover:border hover:border-bg_light;
+    @apply px-3 p-2;
   }
 }
 
@@ -215,22 +213,18 @@ body {
   padding: 0px 20px !important;
 }
 
-.rbc-timeslot-group {
-  background-color: #f7fdff !important;
-}
-
 .rbc-day-slot {
   font-size: 14px !important;
 }
 
 .rbc-event {
   border: none !important;
-  color: black !important;
+  color: rgb(26, 26, 26) !important;
   width: 99% !important;
 }
 
 .rbc-event:nth-child(1) {
-  background-color: #e2f8ff !important;
+  background-color: #f5f4e6 !important;
 }
 
 .rbc-event:nth-child(2) {
@@ -262,7 +256,7 @@ body {
 }
 
 .rbc-event-label {
-  color: gray !important;
+  color: rgb(90, 90, 90) !important;
   margin-bottom: 5px;
 }
 
