styling: landing page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,10 @@
 
 
 @layer base {
+  .primary-btn {
+    @apply text-sm font-semibold lg:text-base border-[1px] border-black px-4 py-2 shadow-[5px_5px_0px_0px] hover:bg-black hover:text-white duration-300 hover:shadow-[5px_5px_0px_0px_#6c6c6c];
+  }
+  
   button {
     @apply text-sm p-1 h-full md:p-2 cursor-pointer border flex items-center hover:shadow-none hover:border hover:border-bg_light;
   }
