--- a/client/src/index.css
+++ b/client/src/index.css
@@ -287,3 +287,12 @@ body {
 .rbc-time-slot:not(.rbc-today .rbc-time-slot) {
   background-color: #eff4f7;
 }
+
+.code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
