--- a/client/src/index.css
+++ b/client/src/index.css
@@ -285,3 +285,26 @@ body {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+
+.navbar {
+  position: fixed;
+  top: 0;
+  right: -280px;
+  min-height: 100vh;
+  z-index: 99999;
+  width: 100%;
+  overflow-y: auto;
+  z-index: 2;
+  transition: 0.5s cubic-bezier(0.33, 0.85, 0.4, 0.96);
+  transform: translateX(0px);
+  transition-duration: 0.5s;
+  visibility: hidden;
+}
+
+.navbar.active {
+  visibility: visible;
+  transform: translateX(-130px);
+  transition-duration: 0.5s;
+}
+
+.navbar .contact-link:is(:hover, :focus-visible) { text-decoration: underline; }
